[package]
name = "livesplit-fltk"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", branch = "master", features = ["software-rendering"] }
livesplit-hotkey = { version = "0.7" }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
opt-level = 3
